# embmi-2021

./: .gitignore  .python-version  README.md  config.yml  data_check.ipynb  jikken.ipynb  main.py  makefile  myclass.py  mylib.py  pyproject.toml
embi/: myclass.py  utils.py
embi/typing/: config.py
embmi/: __init__.py  main.py
embmi/types/: config.py  exdata.py
embmi/typing/: __init__.py  config.py  exdata.py
embmi/utils/: __init__.py  fileio.py  io.py  log.py  process.py  simulator.py
notebooks/: DataViz.ipynb  Execute.ipynb  config.yml
