[tool.poetry]
name = "embmi"
version = "0.1.0"
description = ""
authors = ["Kyoko Kusano"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
tqdm = "^4.62.2"
matplotlib = "^3.4.3"
scipy = "^1.6"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
